--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "cross-env NODE_ENV=development node Task_1/server.js",
     "prod": "cross-env NODE_ENV=production node Task_1/server.js"
   },
+  "type": "module",
   "dependencies": {
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
